--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -167,6 +167,7 @@
           <div class="widget">
              <!-- Latest blog posts -->
              <ul>
+              <li><a href="#"><i class="fa fa-star"></i> New Series: Learning Python & Django </a></li>
               <li><a href="#"><i class="fa fa-star"></i> Building a Blog with Rails </a></li>
               <li><a href="#"><i class="fa fa-star"></i> Creating a simple API using Sinatra </a></li>
               <li><a href="#"><i class="fa fa-star"></i> An Introduction to Go </a></li>
